force-app/main/default/objects/nFORCE__Data_Snapshot__c/nFORCE__Data_Snapshot__c.object-meta.xml
<CustomObject>
    <description>This object stores information related to data snapshot.</description>
    <label>Data Snapshot</label>
    <nameField>
        <label>Data Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>