force-app/main/default/objects/nFORCE__Data_Snapshot__c/fields/nFORCE__Snapshot_DateTime__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Snapshot_DateTime__c</fullName>
    <description>The system automatically populates this required field when the invocable method is called. This field stores the date and time in which the snapshot was requested.</description>
    <label>Snapshot DateTime</label>
    <type>DateTime</type>
</CustomField>