force-app/main/default/objects/nFORCE__Data_Snapshot__c/fields/nFORCE__Snapshot_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Snapshot_Type__c</fullName>
    <description>The system automatically populates this required picklist field based on the data type the system stores. By default, the value is Big Object.</description>
    <label>Snapshot Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>Big Object</fullName>
                <default>true</default>
                <label>Big Object</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>